--- a/source/css/layout/_index.scss
+++ b/source/css/layout/_index.scss
@@ -12,3 +12,8 @@
 // General layout
 // ==========================================================================
 @import 'general';
+
+// ==========================================================================
+// Grid components
+// ==========================================================================
+@import 'grids';
