--- a/source/css/modules/_index.scss
+++ b/source/css/modules/_index.scss
@@ -22,3 +22,8 @@
 // Hero Image
 // ==========================================================================
 @import 'hero';
+
+// ==========================================================================
+// Form
+// ==========================================================================
+@import 'forms';
