--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,6 +2,6 @@
   <!-- Content here -->
 </section>
 
-<div class="container marketing">
+<div class="container">
   <%= partial "partials/instagram-grid" %>
 </div>
