--- a/source/css/all.scss
+++ b/source/css/all.scss
@@ -38,75 +38,11 @@
 // ==========================================================================
 @import "states/index";
 
-.marketing {
-  padding-top: 20px;
-  padding-bottom: 20px;
-  max-width: 950px;
-}
-
-.grid--item {
-  padding: 3px;
-}
-
-.portfolio .grid--item,
-.life-n-style .grid--item {
-  padding: 20px;
-}
-
-.portfolio .grid--item,
-.life-n-style .grid--item {
-  padding-bottom: 0;
-
-  img {
-    width: 100%;
-  }
-
-  figcaption {
-    position: absolute;
-    top: 20px;
-    right: -25px;
-    text-transform: uppercase;
-    @include transform(rotate(90deg) translateX(104%));
-    @include transform-origin(right top 0);
-  }
-}
-
-.featurette-image {
-  margin-bottom: 0;
-}
-
+// temp.
 .press-gallery {
   margin-top: 200px;
 
   &> div > div{
     padding: 15px;
   }
-}
-
-.grid--item figure {
-  height: 500px;
-  overflow: hidden;
-}
-
-.contact .btn {
-  background-color: #000;
-  color: white;
-  border-radius: 0;
-  text-transform: uppercase;
-  padding: 12px 30px;
-  border: 0;
-}
-
-.contact .form-control {
-  color: #000;
-  background-color: #f8f8f8;
-  border: 1px solid #000;
-  text-transform: uppercase;
-  border-radius: 0;
-  -webkit-box-shadow: inset 0 0 0 rgba(0,0,0,0.0);
-  box-shadow: inset 0 0 0 rgba(0,0,0,0.0);
-}
-
-input[placeholder] {
-  color: #000;
 }
