--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-6 col-md-offset-3 col-sm-4 col-sm-offset-4">
+    <div class="col-sm-6 col-sm-offset-3">
       <form class="text-center vertical-center">
         <p class="text-uppercase">For all enquires, please fill in the form below:</p>
         <div class="form-group">
