--- a/source/css/modules/_hero.scss
+++ b/source/css/modules/_hero.scss
@@ -4,15 +4,16 @@
   background-size: cover;
   background-attachment: fixed;
   @include box-shadow(rgba(0,0,0,.2) 0 0 60px 10px inset);
-  @include mq(small) {
+  @include mq(medium) {
 		height: 415px;
+		background-position: 83% 50%;
   }  
 }
 
 .bg-hero--full-height {
   @extend .bg-hero;
   height: 100vh;
-  @include mq(small) {
+  @include mq(medium) {
   	height: 415px;
   }  
 }
