--- a/source/press.html.erb
+++ b/source/press.html.erb
@@ -1,36 +1,36 @@
 <div class="container mobile-padding">
   <div class="press-gallery">
     <div class="row">
-      <div class="col-md-4 col-md-offset-2">
+      <div class="col-sm-4 col-sm-offset-3">
         <a href="https://i-d.vice.com/en_gb/straightup/milly-galvin-jordan-denzel-sarah-jane-spyrides" target="__blank">
           <img src="img/press/id.png" class="img-responsive" alt="">
         </a>
       </div>
-      <div class="col-md-4">
+      <div class="col-sm-4">
         <a href="http://www.dazeddigital.com/artsandculture/gallery/19672/16/dazedgeneration" target="__blank">
-          <img src="img/press/dazed.png" class="img-responsive" alt="">
+          <img src="img/press/dazed.png" class="img-responsive" alt="" style="padding-top: 38px;">
         </a>
       </div>
     </div>
     <div class="row">
-      <div class="col-md-4 col-md-offset-2">
+      <div class="col-sm-4 col-sm-offset-3">
         <a href="http://blog.jackwills.com/style-story-jordan-denzel/" target="__blank">
           <img src="img/press/jack-wills.png" class="img-responsive" alt="">
         </a>
       </div>
-      <div class="col-md-4">
+      <div class="col-sm-4">
         <a href="http://www.magready.com/index.php/blog/Jordan-Denzel" target="__blank">
           <img src="img/press/mag.png" class="img-responsive" alt="">
         </a>
       </div>
     </div>
     <div class="row">
-      <div class="col-md-4 col-md-offset-2">
+      <div class="col-sm-4 col-sm-offset-3">
         <a href="http://pausemag.co.uk/instagrammer-of-the-week-jordan_denzel/" target="__blank">
-          <img src="img/press/pause.png" class="img-responsive" alt="">
+          <img src="img/press/pause.png" class="img-responsive" alt="" style="padding-top: 38px;">
         </a>
       </div>
-      <div class="col-md-4">
+      <div class="col-sm-4">
         <a href="https://i-d.vice.com/en_gb/straightup/jordan-denzel" target="__blank">
           <img src="img/press/id.png" class="img-responsive" alt="">
         </a>
