--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -1,4 +1,4 @@
-<section class="bg-hero--full-height" data-bottom-top="background-position: 50% 10%" data-top-bottom="background-position: 50% 75%">
+<section class="bg-hero--full-height">
   <div class="">
     <div class="col-lg-4 col-lg-offset-4 col-sm-6 col-sm-offset-3 col-xs-12 text-center vertical-center">
       <p class="text-uppercase">Jordan Denzel is a London based fashion stylist, blogger and influencer. Having graduated studying Fashion &amp; Retail in London, his career begun style assisting for clients such as Rita Ora and Labrinth.</p>
