removed skrollr, tablet/mobile optim

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,4 +1,4 @@
-<section class="bg-hero" data-bottom-top="background-position: 50% 10%" data-top-bottom="background-position: 50% 75%">
+<section class="bg-hero">
   <!-- Content here -->
 </section>
 
