--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,7 +1,11 @@
 <section class="bg-hero">
-  <!-- Content here -->
+  <div class="scroll-down">
+    <a href="#main">
+      <i class="fa fa-angle-down fa-5x" style="color: #000;"></i>
+    </a>
+  </div>
 </section>
 
-<div class="container">
+<div id="main" class="container">
   <%= partial "partials/instagram-grid" %>
 </div>
