css cleanup and responsive styles

--- a/source/css/modules/_index.scss
+++ b/source/css/modules/_index.scss
@@ -27,3 +27,8 @@
 // Form
 // ==========================================================================
 @import 'forms';
+
+// ==========================================================================
+// Press
+// ==========================================================================
+@import 'press';
