new image in port

--- a/source/css/modules/_curtain.scss
+++ b/source/css/modules/_curtain.scss
@@ -21,7 +21,7 @@ body.curtain {
   display: none !important;
 }
 .curtain-block.img-1 {
-  background-image: url("https://igcdn-photos-h-a.akamaihd.net/hphotos-ak-xfp1/t51.2885-15/11117029_1401450123506967_2131412174_n.jpg");
+  background-image: url("../img/style.jpg");
 }
 .curtain-block.img-2 {
   background-image: url("https://igcdn-photos-d-a.akamaihd.net/hphotos-ak-xap1/t51.2885-15/11049321_439601382864083_940391779_n.jpg");
