--- a/source/portfolio.html.erb
+++ b/source/portfolio.html.erb
@@ -3,7 +3,7 @@
     <div class="col-xs-10 col-xs-offset-1 grid--item" style="margin-top:200px;">
       <a href="/curtain#img-1">
         <figure>
-          <img src="https://igcdn-photos-h-a.akamaihd.net/hphotos-ak-xfp1/t51.2885-15/11117029_1401450123506967_2131412174_n.jpg" class="img-responsive" alt="">
+          <img src="img/style.jpg" class="img-responsive" alt="">
           <figcaption>Adidas Part I</figcaption>
         </figure>
       </a>
